Updated gitignore & resolved unknown errors